fixed buttons and text align projects h3 at breakpoints

--- a/css/query.css
+++ b/css/query.css
@@ -44,6 +44,10 @@
     font-size: 50px;
   }
 
+  #projects h3 {
+    width: 90%;
+  }
+
   #projects img {
     width: 100%;
     height: 300px;
@@ -52,6 +56,7 @@
   #projects button {
     font-size: 16px;
     letter-spacing: 1.5px;
+    padding: 8px;
   }
 
   footer .container {
@@ -63,7 +68,7 @@
   }
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 768px) {
   header nav {
     display: none;
   }
@@ -88,6 +93,10 @@
     padding: 30px 0;
   }
 
+  #projects h3 {
+    text-align: center;
+  }
+
   #projects .icons {
     justify-content: center;
     width: 100%;
@@ -109,7 +118,7 @@
   }
 
   #projects img {
-    width: 70%;
+    width: 80%;
   }
 
   #projects .buttons {
