--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ header .hero {
 }
 
 #projects img {
-  width: 540px;
+  width: 100%;
   height: 350px;
 }
 
